--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "gatsby": "^2.0.33",
+    "gatsby-plugin-react-helmet": "^3.1.4",
     "gatsby-plugin-sass": "^2.0.7",
     "node-sass": "^4.11.0",
     "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "react-dom": "^16.5.1",
+    "react-helmet": "^5.2.1"
   }
 }
